# LinuxDev2025

01_TerminalProject/: Makefile  example.txt  show  show.c
02_Multifile/: Makefile  const.c  fun.c  outlib.h  prog.c
03_Text/: my_art.txt  randomize.sh
04_Debugging/: Makefile  range  range.c  script1.gdb  script2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protect.c  test.sh
07_Environmental/: Makefile.am  configure.ac  rhasher.c  tests.sh
08_I18n/: Doxyfile.in  Makefile  Makefile.in  config.h  config.status  configure  configure.ac  configure~
08_I18n/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
08_I18n/doxygen-doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals_func.html  graph_legend.html  guess.html  guess_8c.html  index.html
08_I18n/doxygen-doc/html/search/: functions_0.js  functions_3.js
08_I18n/doxygen-doc/latex/: guess_8c.tex  guess_8c.tex.tmp
08_I18n/doxygen-doc/man/man1/: _home_evalyzy_Linux_LinuxDev2025_08_I18n_src_.1  guess.1
08_I18n/guess/: configure.ac  configure.ac~
08_I18n/guess/autom4te.cache/: traces.0t
08_I18n/po/: Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  guess.pot  ru.gmo  ru.po  zh_CN.po
08_I18n/src/: Makefile  Makefile.am  guess.c
08_I18n/src/.deps/: guess.Po
08_I18n/zh_CN/LC_MESSAGES/: guess.mo
09_PatchDiff/: 0001-size-from-cli.patch  0002-symbols-from-cli.patch  0003-seed-from-cli.patch  Makefile  maze.c
10_LibTesting/: Makefile.am  Makefile.in  build_fantasy_project.py  config.h.in  configure  configure.ac  configure~
10_LibTesting/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.3
10_LibTesting/src/: Makefile.am  Makefile.in  const.h  libnamegen.c  namegen.c  namegen.h  tablegen.py
10_LibTesting/tests/: Makefile.am  Makefile.in  dummy.c  dummy.ts  upstream.c  upstream.ts
11_Documenting/autom4te.cache/: traces.0  traces.1
11_Documenting/doxygen-doc/html/: globals.html  globals_defs.html  guess_8c__incl.dot  pages.html
11_Documenting/doxygen-doc/html/search/: all_2.js  all_4.js  defines_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js
11_Documenting/doxygen-doc/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  guess.tex  guess_8c__incl.dot  refman.tex
11_Documenting/doxygen-doc/man/man1/: guess.c.1
11_Documenting/po/: ru.po~
11_Documenting/src/: Makefile.in  guess.c
12_InstallPackaging/solver_project/: L1L9jMbmSr  Makefile.am  Makefile.in  configure  configure.ac
12_InstallPackaging/solver_project/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
12_InstallPackaging/solver_project/man/: Makefile.am  Makefile.in  solver.1
12_InstallPackaging/solver_project/po/: Makevars  ru.gmo  ru.po  solver.pot
12_InstallPackaging/solver_project/src/: Makefile.am  Makefile.in  main.c  solver.c  solver.h
12_InstallPackaging/solver_project/tests/: Makefile.am  Makefile.in  test_solver.c
